Add a build that does not need Gradle
The Gradle wrapper is a second thing that can break before any of our code
runs: a partial distribution download leaves it unable to start, and it
happily runs on a JDK 8 that cannot compile the launcher.

build.sh and build.ps1 compile the three modules with nothing but a JDK,
no downloads and no wrapper, and write dist/storm-agent.jar and
dist/storm-launcher.jar. Passing "test" also runs the smoke test. Both
check the JDK version up front and still build core and agent when the
JDK is too old for the launcher.

README gains a troubleshooting section covering the wrapper error, running
Gradle on the wrong JDK, JRE versus JDK for the attach API, and the
dynamic agent restriction on Java 21+.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01GJbPFZ1KupwAPQVU1DdSqZ